--- a/MVCTutorial/MVCTutorial/Views/Employee/About.cshtml
+++ b/MVCTutorial/MVCTutorial/Views/Employee/About.cshtml
@@ -6,4 +6,22 @@
 <h2>About</h2>
 
 <h1>From Employee COntroller</h1>
-<a href="Employee/Index">Index</a>
+
+
+@DateTime.Now
+
+@{
+    var n = 10;
+    for (int i = 1; i < n; i++)
+    {
+        <h1>@i</h1>
+    }
+    if (4 > 7)
+    {
+        <h2>Greater</h2>
+    }
+    else
+    {
+        <h2>Lesser</h2>
+    }
+}
