Added Layout And Rendering

--- a/MVCTutorial/MVCTutorial/Views/Home/Index.cshtml
+++ b/MVCTutorial/MVCTutorial/Views/Home/Index.cshtml
@@ -30,6 +30,8 @@
     </div>
 </div>
 
+@RenderPage("~/Views/Home/Contact.cshtml")
+
 <h1>@ViewBag.MyProperty</h1>
 @foreach (var item in ViewBag.MyList)
 {
