--- a/MVCTutorial/MVCTutorial/Views/Shared/_Layout.cshtml
+++ b/MVCTutorial/MVCTutorial/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("MyHome", "Index", "Home")</li>
+                    <li>@Html.ActionLink("MyAbout", "About", "Home")</li>
+                    <li>@Html.ActionLink("MyContact", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
@@ -34,7 +34,9 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+    <div>
+@*        @RenderSection("MySection",required:true)*@
+    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
