--- a/MVCTutorial/MVCTutorial/Views/Shared/_Layout.cshtml
+++ b/MVCTutorial/MVCTutorial/Views/Shared/_Layout.cshtml
@@ -35,9 +35,10 @@
         </footer>
     </div>
     <div>
-@*        @RenderSection("MySection",required:true)*@
+        @*        @RenderSection("MySection",required:true)*@
     </div>
     @Scripts.Render("~/bundles/jquery")
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
